--- a/index.html
+++ b/index.html
@@ -30,6 +30,29 @@
                               <label for="student-email">Email</label>
                               <input type="email" class="form-control" id="student-email" placeholder="Enter student email">
                             </div>
+                            <div class="form-group my-3">
+                                <label for="student-gender">Gender</label>
+                                <div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="student-gender" id="gender-male" value="Male">
+                                        <label class="form-check-label" for="gender-male">Male</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="student-gender" id="gender-female" value="Female">
+                                        <label class="form-check-label" for="gender-female">Female</label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group my-3">
+                                <label for="student-teacher">Select Supervisor</label>
+                                <select class="form-control" id="student-teacher">
+                                    <option value="" disabled selected>Choose a teacher</option>
+
+                                </select>
+                            </div>
+                            
+                            
                             <div class="d-flex justify-content-center">
                                 <button type="submit" id="add-student" class="btn btn-success">Add Student</button>
                             </div>
